--- a/src/css/single-product.css
+++ b/src/css/single-product.css
@@ -1,11 +1,16 @@
 /* SINGLE PRODUCT BEGINS */
+.single-product {
+  border-bottom:1px solid #000000;
+  margin-bottom:20px;
+}
+
 .product-title {
   height:55px;
 }
 
 .product-image {
   margin: 10px 0 20px 0;
-  height:195px;
+  height:240px;
   overflow:hidden;
 }
 
